fix(buttons): align button to middle

--- a/src/components/button/styles/vars/CdrButton.vars.scss
+++ b/src/components/button/styles/vars/CdrButton.vars.scss
@@ -40,6 +40,7 @@
   text-align: left;
   text-decoration: none;
   text-transform: none;
+  vertical-align: middle;
 
   transition: box-shadow $cdr-duration-2-x $cdr-timing-function-ease, background-color $cdr-duration-2-x $cdr-timing-function-ease, color $cdr-duration-2-x $cdr-timing-function-ease;
 
